--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT = 3002
 DB_CONNECTION = mongodb+srv://sri0777:2211981406@cluster777.abi0vyz.mongodb.net/fresher?retryWrites=true&w=majority&appName=Cluster777
 SECRET = abc@123#
+EMAIL_USER = wealthsaviour777@gmail.com
+EMAIL_PASS = lhan zgwg ookh zscj
