--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,19 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "intersection-observer": "^0.12.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.9.16",
+    "puppeteer": "^23.9.0",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
-    "sass": "^1.81.0"
+    "react-toastify": "^10.0.6",
+    "sass": "^1.81.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
