--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "build": "apt-get update && apt-get install -y chromium-browser && npm install",
      "postbuild": "npx puppeteer install"
   },
   "keywords": [],
