--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "npm install",
-    "postinstall": "apt-get update && apt-get install -y chromium"
+    "build": "npm install && npx nodemon ./server.js",
   },
   "keywords": [],
   "author": "",
