--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon ./server.js",
-    "build": "npm install -y"
+    "build": "npm install -y",
+    "postinstall": "npx puppeteer install"
   },
   "keywords": [],
   "author": "",
